# games-review

./: .pylintrc  .travis.yml  Procfile  README.md  manage.py  pyproject.toml  pytest-coverage.txt  pytest.ini  pytest.xml  requirements-dev.txt  requirements.txt
.github/workflows/: coverage.yml  pylint.yml
contrib/: envsample
games_review/: asgi.py  settings.py  urls.py  wsgi.py
