[tool.poetry]
name = "games-review"
version = "0.1.0"
description = ""
authors = ["Lucas Alves <sociallucasalves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "5.1.5"
python-decouple = "3.8"

[tool.poetry.group.dev.dependencies]
pylint = "3.3.4"
ipython = "8.32.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.'MASTER']
ignore-patterns = "test*,helpers,pdfbase64,enums"
ignore = "tests,fixtures,migrations"
ignore-docstrings = true
disable = [
    "C0103", "C0116", "C0114", "C0115", "E1101", "R0903", "R0801"
]
max-line-length = 119
output-format = "colorized"

